# cFMS

./: .gitignore  .gitmodules  Makefile.am  README.md  aclocal.m4  configure  configure.ac  mkmods.mk
.github/: github_autotools_gnu.yaml~
.github/workflows/: github_autotools_gnu.yaml  test.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
c_constants/: Makefile.am  c_constants.F90  c_constants.h
c_data_override/: Makefile.am  c_data_override.F90  c_data_override.h
c_data_override/include/: c_data_override_0d.fh  c_data_override_0d.inc  c_data_override_2d.fh  c_data_override_2d.inc  c_data_override_3d.fh  c_data_override_3d.inc
c_diag_manager/: Makefile.am  c_diag_manager.F90  c_diag_manager.h  c_diag_manager_mod.mod
c_diag_manager/include/: c_diag_axis_init.fh  c_diag_axis_init.inc  c_register_diag_field.fh  c_register_diag_field.inc  c_send_data.fh  c_send_data.inc  c_send_data_bkup.fh
c_fms/: Makefile.am  Makefile.in  c_fms.F90  c_fms.h  c_mpp.F90  c_mpp.h  c_mpp_domains.F90  c_mpp_domains.h  c_mpp_domains_structs.h
c_fms/include/: c_fms_interfaces.fh  c_fms_interfaces.inc  c_mpp_domains_update.fh  c_update_domains.fh  c_update_domains.inc  c_update_vector_domains.fh  c_update_vector_domains.inc  c_vector_update_domains.fh  c_vector_update_domains.inc
c_fms_utils/: Makefile.am  c_fms_utils.F90
c_fms_utils/include/: array_to_pointer.fh  array_to_pointer.inc  pointer_to_array.fh  pointer_to_array.inc
c_grid_utils/: Makefile.am  c_grid_utils.F90  c_grid_utils.h
c_horiz_interp/: Makefile.am  Makefile.in  c_horiz_interp.F90  c_horiz_interp.h
c_horiz_interp/include/: c_get_interp.fh  c_get_interp.inc  c_horiz_interp.fh  c_horiz_interp.inc  c_horiz_interp_new.fh  c_horiz_interp_new.inc
cdiag_manager/: Makefile.am  cdiag_manager.F90  cdiag_manager.h
cdiag_manager/include/: cdiag_manager.fh  cdiag_manager.inc  cfms_diag_axis_init.fh  cfms_diag_axis_init.inc  cfms_register_diag_field.fh  cfms_register_diag_field.inc
cfms/: LOG  Makefile.am  Makefile.in  cfms.F90  cfms.h  cmpp.F90  cmpp.h  cmpp_domains.F90  cmpp_domains.h  cmpp_domains_structs.h
cfms/include/: cfms_interfaces.fh  cfms_interfaces.inc  cmpp_domains.fh  cmpp_domains.inc
docs/: Makefile  Makefile.in
libcFMS/: Makefile  Makefile.am  Makefile.in  libcFMS.la
libcFMS/.libs/: libcFMS.la  libcFMS.lai  libcFMS.so.21.0.0
test_cfms/: Makefile  Makefile.am  Makefile.in  intel_coverage.sh  test-lib.sh
test_cfms/c_data_override/: Makefile.am  test_data_override.c  test_data_override.sh  test_data_override_2d.c  test_data_override_2d.sh  test_data_override_3d.c  test_data_override_3d.sh  test_data_override_ongrid.F90  test_data_override_scalar.c  test_data_override_scalar.sh
test_cfms/c_diag_manager/: Makefile.am  test_send_data.c  test_send_data.sh  test_send_data_2d.c  test_send_data_2d.sh  test_send_data_3d.c  test_send_data_3d.sh
test_cfms/c_fms/: Makefile.am  Makefile.in  c_mpp_domains_helper.c  c_mpp_domains_helper.h  test_cfms.h  test_define_domains.c  test_define_domains.sh  test_getset_domains.c  test_update_domains.c  test_vector_update_domains.c  test_vector_update_domains.sh
test_cfms/c_fms_utils/: Makefile.am  test_utils.F90  test_utils.sh  test_utils_c.c
test_cfms/c_grid_utils/: Makefile.am  test_grid_utils.c  test_grid_utils.sh
test_cfms/c_horiz_interp/: Makefile  Makefile.am  Makefile.in  test_create_xgrid  test_create_xgrid.c  test_create_xgrid.sh  test_horiz_interp_conserve.c  test_horiz_interp_conserve.sh  test_horiz_interp_new.c  test_horiz_interp_new.sh
test_cfms/c_horiz_interp/.deps/: test_create_xgrid.Po
test_cfms/c_horiz_interp/.libs/: test_create_xgrid
test_cfms/cdiag_manager/: Makefile.am  test_register_diag_field  test_register_diag_field.c  test_register_diag_field.sh
test_cfms/cfms/: Makefile  Makefile.am  Makefile.in  fort.0  test_cFMS_update_domains.c  test_cFMS_update_domains.sh  test_cfms  test_cfms.c  test_cfms.h  test_cfms.sh  test_define_domains.c  test_getset_domains.c  test_getset_domains.sh  test_nest_domain.c  test_nest_domain.sh  test_update_domains.c  test_update_domains.sh
test_cfms/cfms/.deps/: test_define_domains.Po
